<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022 xuexiangjys(xuexiangjys@163.com)
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~       http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/tip_please_input_phone_number"
            android:inputType="number"
            app:met_clearButton="true"
            app:met_errorMessage="@string/tip_phone_number_error"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/title_phone_number"
            app:met_regexp="@string/regex_phone_number" />

        <com.xuexiang.xui.widget.edittext.materialedittext.MaterialEditText
            android:id="@+id/et_verify_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_please_input_verify_code"
            android:inputType="number"
            app:met_clearButton="false"
            app:met_errorMessage="@string/tip_verify_code_error"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/lab_verify_code"
            app:met_maxCharacters="4"
            app:met_regexp="@string/regex_verify_code" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="登录" />

    </LinearLayout>

    <com.xuexiang.xui.widget.textview.LoggerTextView
        android:id="@+id/logger"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

</LinearLayout>